Text manipulation sometimes fails to replace text in title elements https://bugs.webkit.org/show_bug.cgi?id=210750 <rdar://problem/61066103>

Reviewed by Tim Horton and Darin Adler.

Source/WebCore:

Internal clients using WebKit text manipulation APIs currently fail to replace text in title and option elements
in the case where text manipulation has been completed with more than one token. These are elements for which we
want to replace the entire text as a single token, even if the text manipulation client ends up breaking the
token into multiple chunks.

To handle this case, pull the `title || option` check out into a helper function, and consult it when completing
text manipulation in the case where the manipulation data lacks either start or end positions. If
`canPerformTextManipulationByReplacingEntireTextContent` is true and there are multiple replacement tokens,
allow ourselves to process the replacement by combining the replacement tokens into a space-separated string.

Test: TextManipulation.CompleteTextManipulationShouldReplaceTextContentWithMultipleTokens

* editing/TextManipulationController.cpp:
(WebCore::canPerformTextManipulationByReplacingEntireTextContent):
(WebCore::TextManipulationController::observeParagraphs):
(WebCore::TextManipulationController::replace):

Tools:

Add a new API test to verify that a single title or option element may be replaced with multiple tokens, as long
as all the token identifiers match.

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:


Canonical link: https://commits.webkit.org/223650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260393 268f45cc-cd09-0410-ab3c-d52691b4dbfc